# proto-rust

./: .gitmodules  Cargo.toml  README.md  build.rs  provider.proto
src/: google.protobuf.rs  lib.rs  provider.rs
