[package]
name = "proto_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.11.0"
prost-wkt = "0.4"
prost-wkt-types = "0.4"
chrono = { version = "0.4.19", features = ["serde"] }
uuid = { version = "1.2.1", features = ["v4"] }
serde = { version = "1.0.136", features = ["derive"] }
bytes = "1.1.0"

[build-dependencies]
tonic-build = "0.8.2"
prost-build = "0.11"
prost-wkt-build = "0.4"